# QTraderFX

./: README.md  pyproject.toml
cfg/: parameters.yaml
notebooks/: backtesting.ipynb  dashboard.ipynb  gym-anytrading.ipynb  gym-anytrading_w_indicators.ipynb  process_streaming.ipynb  q_learning.ipynb  scratchpad.ipynb
src/: fetch_historical_data.py  live_dashboard.py  main.py  orders.py  q_learning.py  streaming_pipeline.py  trading_bot.py  utils.py
